added table for each store object

--- a/sales.html
+++ b/sales.html
@@ -8,7 +8,16 @@
 <body>
   <h1 class="header">Cookie Sales</h1>
   <div id="cookiesales">
-
+    <!-- article
+          table
+            table header (Store Hours)
+            tr (6)
+            td (store name)
+              td (avg cookie per hour)
+              td (daily total)
+          /table
+         /article 
+    -->
   </div>  
 
   <script src="/js/app.js"></script>
