--- a/sales.html
+++ b/sales.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+  <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
   <title>Salmon Cookies</title>
 </head>
@@ -20,6 +20,6 @@
     -->
   </div>  
 
-  <script src="/js/app.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 </html>
