updated css and images

--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Salmon Cookies</title>
 </head>
 <body>
-  
+  <header>
+    <img src="./img/salmon.png" alt="Salmon">
+    <h1>Pat's Salmon Cookies</h1>
+   
+    <nav>
+      <a href="sales.html">Sales</a>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <img src="./img/family.jpeg" alt="Family">
+      <p>Here at Pat's Salmon Cookies shop, we strive to bring you the most delicious, fish shaped cookies! We are a family owned business that was started in our home!</p>
+    </section>
+    <section>
+      <img src="./img/cutter.jpeg" alt="cutter">
+      <p>Monday - Saturday</p><br>
+      <p>6:00am to 7:00pm</p>
+    </section>
+    <section>
+      <img src="./img/shirt.jpeg" alt="Shirts">
+      <p>Please visit our gift shop and buy our hip and cool merchandise that we guarantee the whole family will love!!!</p>
+    </section>
+    <section>
+      <img src="./img/frosted-cookie.jpeg" alt="cookie">
+      <img src="./img/fish.jpeg" alt="">
+    </section>
+  </main>
 
-  <!-- <script src="./js/app.js"></script> -->
-</body>
+
+  <footer>
+    <img src="./img/chinook.jpeg" alt="chinook">
+    <p>Pat's Salmon Cookies<br>
+       123-456-0789<br>
+       123 Salmon Ave.<br>
+       Seattle, WA 98411
+    </p>
+  </footer>
+  </body>
 </html>
