--- a/sales.html
+++ b/sales.html
@@ -2,24 +2,33 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/sales.css">
   <title>Salmon Cookies</title>
 </head>
 <body>
-  <h1 class="header">Cookie Sales</h1>
-  <div id="cookiesales">
-    <!-- article
-          table
-            table header (Store Hours)
-            tr (6)
-            td (store name)
-              td (avg cookie per hour)
-              td (daily total)
-          /table
-         /article 
-    -->
-  </div>  
+  <header>
+    <img src="./img/salmon.png" alt="Salmon">
+    <h1 class="header"><h1>Pat's Salmon Cookies</h1></h1>
 
+    <nav>
+      <a href="index.html">Home</a>
+    </nav>
+  </header>
+  <main>
+    <h2>Store Sales</h2>
+    <div id="cookiesales">
+      <!-- article
+            table
+              table header (Store Hours)
+              tr (6)
+              td (store name)
+                td (avg cookie per hour)
+                td (daily total)
+            /table
+          /article 
+      -->
+    </div>  
+</main>
   <script src="./js/app.js"></script>
 </body>
 </html>
