completed majority of css and finished SOME js

--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
   <main>
     <section>
       <img src="./img/family.jpeg" alt="Family">
+      <h2>About Us</h2>
       <p>Here at Pat's Salmon Cookies shop, we strive to bring you the most delicious, fish shaped cookies! We are a family owned business that was started in our home!</p>
     </section>
     <section>
       <img src="./img/cutter.jpeg" alt="cutter">
-      <p>Monday - Saturday</p><br>
-      <p>6:00am to 7:00pm</p>
-    </section>
-    <section>
+      <h2>Hours of Operation</h2>
+      <p>Monday - Saturday<br>
+        6:00am to 7:00pm</p>
+
       <img src="./img/shirt.jpeg" alt="Shirts">
+      <h2>Gift Shop</h2>
       <p>Please visit our gift shop and buy our hip and cool merchandise that we guarantee the whole family will love!!!</p>
     </section>
     <section>
